Fixing list layout issues in mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css?family=Architects+Daughter|Quicksand&display=swap");
-@import "./_variables.scss";
-@import "./pages/Recipes.scss";
+@import url('https://fonts.googleapis.com/css?family=Architects+Daughter|Quicksand&display=swap');
+@import './_variables.scss';
+@import './pages/Recipes.scss';
 
 // Changes the font site-wide
 * {
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 // Forces scrollbar to always be present, to combat the center being
@@ -124,7 +124,7 @@ hr {
 
 // Styling for nav "brand" (MixNJuice "logo")
 .navbar-brand {
-  font-family: "Architects Daughter", cursive;
+  font-family: 'Architects Daughter', cursive;
   font-size: 3em;
 }
 
@@ -153,9 +153,9 @@ hr {
 // Changing disabled buttons to grey
 .btn-primary.disabled,
 .btn-primary:disabled {
-  color: gray("800");
-  background-color: gray("300");
-  border-color: gray("800");
+  color: gray('800');
+  background-color: gray('300');
+  border-color: gray('800');
 }
 
 // Changing the border of any form fields
@@ -179,7 +179,7 @@ hr {
 
 // Changing the background for the text next to an input field
 .input-group-text {
-  background-color: gray("200");
+  background-color: gray('200');
 }
 
 // Changing the column width of the ingredient percent input
@@ -210,7 +210,7 @@ input {
 }
 
 // Style for file inputs
-.custom-file-input[type="file"] {
+.custom-file-input[type='file'] {
   border: 1px solid $black;
   border-radius: 0.25rem;
   padding: 5px;
@@ -247,7 +247,7 @@ input {
     transition: none;
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       width: 100%;
       transform: scaleX(0);
@@ -262,7 +262,7 @@ input {
   }
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     transform: scaleX(0);
@@ -305,7 +305,7 @@ input {
 
   @media screen and (prefers-reduced-motion: reduce) {
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       left: 0;
       bottom: 0;
@@ -319,7 +319,7 @@ input {
 
   @media screen and (prefers-reduced-motion: reduce) {
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       left: 0;
       bottom: 0;
@@ -332,7 +332,7 @@ input {
   }
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     bottom: 0;
@@ -410,6 +410,7 @@ input {
   border: 1px solid $teal;
   border-radius: 5px;
   background-color: $lighter-blue;
+  white-space: pre;
 
   &:hover,
   &:focus {
